--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,6 +32,8 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
+        pwd
+        ls
     
     - name: LaTeX Render Action for Github
       uses: AffineParameter/latex-action@a0.2.1
