--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         echo Add other actions to build,
         echo test, and deploy your project.
-        pwd
+        pwd,
         ls
     
     - name: LaTeX Render Action for Github
